src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-omT-ofT-dwP0.25-dhF500-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\nopen maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: F500\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
